<resources
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:ignore="MissingTranslation">
    <string name="app_name">Common</string>
    <string name="man">Person</string>
    <string name="no_network">No Network Connection</string>
    <string name="install_wx">Please install Wechat client</string>
    <string name="toast_login_expired">Logining failed. Please login again</string>
    <string name="network_error">Your network speed is not impressive !</string>
    <string name="datefulldialog_info_endtime">End time cannot be less than start time</string>
    <string name="datefulldialog_info_starttime">Start time cannot be more than end time</string>
    <string name="register_name_digits">0123456789abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ</string>
    <string name="message_info">Dear, you have %1$s unread messages!</string>
    <string name="loading">Loading</string>
    <string name="btn_finish">Complete</string>
    <string name="dataloading">Loading…</string>
    <string name="loading_error">Loading failed</string>
    <string name="first_password">You use it initially. Please pre-set password</string>
    <string name="insert_this_password">Please input payment code to verify identity</string>
    <string name="insert_pay_password_please">Please input payment code</string>
    <string name="insert_new_password_please">Please input new password</string>
    <string name="insert_new_password_again">Please re-input new password</string>
    <string name="insert_new_password">Please set new payment code</string>
    <string name="twice_password_is_not_same">Twice password is different. Please re-input new password</string>
    <string name="cancel_dialog">Re-input</string>
    <string name="forget_password">Forget Password</string>
    <string name="ok">Confirm</string>
    <string name="can_pay_for_order">Fail to pay order for unknown error</string>

    <string name="user_name">Current Account: %1$s</string>
    <string name="init_new_password">Set New Password</string>
    <string name="prompt_info_common">Requiring Server...</string>


    <string name="personal_btn_bangding">Bind</string>
    <string name="personal_btn_un_bangding">Release Bind</string>
    <string name="resume_manager">Resume Mgt.</string>
    <string name="personal_resume_prive">Resume Preview</string>
    <string name="personal_buy">Purchase</string>
    <string name="personal_del">Delete</string>
    <string name="personal_resume_del">Delete the resume or not?</string>
    <string name="personal_cancle">Cancel</string>
    <string name="personal_tv_beijin">Beijing</string>
    <string name="personal_now_place">Current location</string>
    <string name="personal_choose_place">Select City</string>
    <string name="personal_add_language_degree">Select Mastery Level</string>
    <string name="personal_select_lab">Selected Industry</string>
    <string name="personal_tv_open">Expand</string>

    <string name="personal_login_success_msg">Successfully Login</string>
    <string name="personal_submit">Submit</string>
    <string name="personal_jobdict_zhineng">All Functions</string>
    <string name="personal_jobdict_zhineng_select">Selected Function</string>
    <string name="personal_jobdict_hangye">Select Industry</string>
    <string name="personal_jobdict_hangye_select">Selected Industry</string>
    <string name="personal_jobdict_choose_zhineng">Select Function</string>
    <string name="personal_jobdict_choose_city">Selected Location</string>
    <string name="personal_jobdict_city">Select Location</string>
    <string name="personal_jobdict_all_hangye">All Industries</string>
    <string name="personal_jobdict_shou">Retract</string>
    <string name="personal_jobdict_zhan">Expand</string>
    <string name="personal_jobdict_msg">Only this option is existent. Undeletable</string>
    <string name="personal_jobdict_max_msg">Selection of Maximum</string>
    <string name="personal_jobdict_ge">个</string>

    <string name="personal_choose_work_years">Select Working Life</string>
    <string name="personal_choose_company_type">Select Company Type</string>
    <string name="personal_choose_company_size">Select Company Size</string>
    <string name="personal_choose_chuangye">Select Entrepreneurial Experience</string>
    <string name="personal_choose_pay">Select Salary Range</string>
    <string name="personal_choose_zhiwei_num">Select Job No.</string>
    <string name="personal_choose_fabu">Release Date</string>
    <string name="personal_choose_city">Select City</string>
    <string name="personal_choose_zhiye">Select Career</string>
    <string name="personal_choose_zhuanye">Select Major</string>
    <string name="personal_choose_xueli">Select Education</string>
    <string name="personal_choose_hunyin">Marriage Status</string>
    <string name="personal_choose_hangye">Select Industry</string>
    <string name="personal_choose_age">Select Age</string>

    <string name="personal_mobile_msg">Phone Message</string>
    <string name="personal_weixin">Wechat</string>
    <string name="personal_friend_cicle">Moments</string>
    <string name="personal_weibo">Microblog</string>

    <string name="personal_save">Save</string>
    <string name="personal_please_msg">Please input something before save</string>
    <string name="personal_max_msg">Word length exceeds limitation</string>

    <string name="personal_add_language_type">Select Language Type</string>

    <string name="app_approval">Approve</string>
    <string name="common_my_approval">Approval</string>
    <string name="my_launch">Application</string>
    <string name="cc_me">Cced To Me</string>
    <string name="overtime">OT</string>
    <string name="leave">Leave</string>
    <!--<string name="change_sign">Attendance Makeup</string>-->
    <string name="change_sign">Abnormal Clock</string>
    <string name="change_sign_apply">Abnormal Clock</string>

    <string name="ordinary_approval">Approval</string>
    <string name="approval_recruit_plan">Recruit Plan</string>

    <string name="end_time">End time</string>
    <string name="start_time">Start time</string>
    <string name="search">Search</string>
    <string name="search_user">Contacts</string>
    <string name="lable_notice">Announcement</string>
    <string name="lable_notification">Notice</string>
    <string name="todo">Todo</string>
    <string name="search_chatgroup">Group Chat</string>
    <string name="search_chatmessage">Chat Log</string>
    <string name="search_pushmessage">Message</string>
    <string name="search_message_acount">Totally %1$d and %2$s relevant chat logs</string>

    <string name="message_comment">Comments</string>

    <string name="waiting_approval_num">Pending approval(%1$s)</string>
    <string name="already_approval_num">Approved(%1$s)</string>
    <string name="waiting_approval">Pending approval</string>
    <string name="already_approval">Approved</string>
    <string name="title_signcard">Clock-in</string>

    <string name="date_year">Year</string>
    <string name="date_month">Month</string>
    <string name="date_day">Day</string>
    <string name="date_hour">Hour</string>
    <string name="date_minute">Min</string>
    <string name="datefulldialog_starttime">Start time cannot be 24 hours less than end time</string>
    <string name="datefulldialog_endtime">End time cannot be 24 hours more than start time</string>

    <string name="unbundling_prompt">Bind successfully</string>
    <string name="cc_count">%1$sPeople</string>

    <string name="load_fail_prompt">Page loading errors, click retry</string>
    <string name="select_not_less_current">Select a date cannot be less than the current date</string>
    <string name="select_not_great_current">Select a date cannot be greater than the current date for 30 days</string>

    <string name="scan_qr_code">Scan QR Code</string>
    <string name="pc_browser_opens">Open </string>
    <string name="and_scan_qr_code"> in the browser, and scan QR code on the page</string>
    <string name="scanning">Scanning...</string>
    <string name="scan_fail">Scan fail...</string>
    <string name="please_login_qr_code">Please align login QR code</string>
    <string name="frame_below">at the frame below</string>
    <string name="install_wb">Please install weibo client</string>
    <string name="application_name">VanCloud</string>

    <string name="vantop_cancel_prompt">The application has been canceled!</string>
    <string name="btn_save_contact">Save mobile</string>
    <string name="xmpp_group_user_max">Can\'t be more than%1$d people</string>
    <string name="name_tag" >name</string>
    <string name="title_tip">Prompt</string>
    <string name="choose_start_time">Please select start time</string>
    <string name="end_time1">Expire Date</string>
    <string name="vancloud_photo_album">Album</string>
    <string name="vancloud_photo_album_prompt">Only select to 9 pictures</string>
    <string name="vancloud_nofile_prompt">File is inexistence</string>
    <string name="lable_schedule_signcard_address">Clock-in Location</string>
    <string name="toast_clock_in_location">Please select Clock-in Location</string>
    <string name="lable_selected">Seleted</string>
    <string name="camera_permissions"> Please open the "camera" access rights in application management!</string>
    <string name="vantop_isemulator">Abnormal equipment!</string>
    <string name="permissions_equipment">Permissions equipment!</string>
    <string name="batch_hint">Please select at least one record</string>
    <string name="device_permissions">Permission application failed</string>
</resources>
