<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/btn_single_item"
    android:paddingTop="10dp"
    android:paddingLeft="10dp"
    android:paddingRight="10dp">
    <TextView
        android:text="@string/title_tip"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <TextView
        android:layout_alignLeft="@id/tv_title"
        android:id="@+id/tv_starttime"
        android:text="@string/choose_start_time"
        android:layout_marginTop="5dp"
        android:layout_below="@id/tv_title"
        android:textColor="@color/font"
        android:textSize="14sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_marginRight="5dp"
        android:layout_marginLeft="5dp"
        android:layout_toRightOf="@id/tv_starttime"
        android:id="@+id/tv_from"
        android:text="@string/from"
        android:layout_marginTop="5dp"
        android:layout_below="@id/tv_title"
        android:textColor="@color/font"
        android:textSize="14sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_marginBottom="10dp"
        android:layout_toRightOf="@id/tv_from"
        android:id="@+id/tv_endtime"
        android:text="@string/end_time1"
        android:layout_marginTop="5dp"
        android:layout_below="@id/tv_title"
        android:textColor="@color/font"
        android:textSize="14sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <TextView
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:textColor="@color/red"
        android:textSize="14sp"
        android:id="@+id/tv_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
</RelativeLayout>
